Transform operations, on consecutive edge loops, alter selection when auto merged #48616

Closed
opened 2016-06-08 19:29:18 +02:00 by derek watts · 8 comments

System Information
Win 7 Home - 64 bit, GTX 580
Win 10 Home - 64 bit, GT 730

Blender Version
confirmed 2.77 438bdcc and 2.77a abf6f08

Short description of error
Using tool_settings.use_mesh_automerge causes selection issues, specifically in edge select mode, with two or more consecutive/parallel loops selected. Blender will select ring edges after transform operations. See: Imgur

Exact steps for others to reproduce the error
New scene > Subdivide default cube > Select two or more loops (should be parallel, should not be separated by another loop) > G/R/S/etc the selection > Note selection has been extended as if changed to vert mode and back.

**System Information** Win 7 Home - 64 bit, GTX 580 Win 10 Home - 64 bit, GT 730 **Blender Version** confirmed 2.77 438bdcc and 2.77a abf6f08 **Short description of error** Using tool_settings.use_mesh_automerge causes selection issues, specifically in edge select mode, with two or more consecutive/parallel loops selected. Blender will select ring edges after transform operations. See: [Imgur](http://i.imgur.com/9dZu5Ke.png) **Exact steps for others to reproduce the error** New scene > Subdivide default cube > Select two or more loops (should be parallel, should not be separated by another loop) > G/R/S/etc the selection > Note selection has been extended as if changed to vert mode and back.
Author

Changed status to: 'Open'

Changed status to: 'Open'
Author

Added subscriber: @DerekWatts

Added subscriber: @DerekWatts

Added subscribers: @ideasman42, @mont29

Added subscribers: @ideasman42, @mont29
Campbell Barton was assigned by Bastien Montagne 2016-06-12 17:21:42 +02:00

Can confirm the issue, @ideasman42 think this is your area?

@DerekWatts please always add a small .blend demonstrating the issue, always simpler for us, like this one:
meshedit_automerge_selection.blend

Can confirm the issue, @ideasman42 think this is your area? @DerekWatts please always add a small .blend demonstrating the issue, always simpler for us, like this one: [meshedit_automerge_selection.blend](https://archive.blender.org/developer/F316899/meshedit_automerge_selection.blend)
Author

In #48616#377938, @mont29 wrote:
@DerekWatts please always add a small .blend demonstrating the issue, always simpler for us, like this one:
meshedit_automerge_selection.blend

My apologies. I considered adding a blend, but thought it might be patronizingly simplistic. I'll be sure to add them in future reports.

> In #48616#377938, @mont29 wrote: > @DerekWatts please always add a small .blend demonstrating the issue, always simpler for us, like this one: > [meshedit_automerge_selection.blend](https://archive.blender.org/developer/F316899/meshedit_automerge_selection.blend) My apologies. I considered adding a blend, but thought it might be patronizingly simplistic. I'll be sure to add them in future reports.

Confirmed, will commit fix shortly.

Confirmed, will commit fix shortly.

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

This issue was referenced by 1883dbd8c3

This issue was referenced by 1883dbd8c3ad00fea7b31769943365698e66317a
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#48616
No description provided.